<resources>
    <string name="app_name">Fix My Ride</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home Screen</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Contact</string>
    <string name="title_call">Call</string>
    <string name="title_history">History</string>
    <string name="title_police">Police Emeregency Contacts</string>
    <string name="title_ambulance">Ambulance / Fire and rescue</string>
    <string name="title_government">Government Information Center</string>
    <string name="title_express">Expressway Emergency Call</string>
    <string name="title_emergency">Emergency Contact</string>
</resources>